Simplify sub element generator selection